--- a/index.html
+++ b/index.html
@@ -14,14 +14,33 @@
 <div id="container">
     <h1><a href="http://github.com/dbourdette/glass">glass</a></h1>
 
-    <div class="description">
-        Web ui for quartz scheduler
-    </div>
+    <p>Glass is a java library providing a web ui for quartz scheduling library.</p>
 
+    <p>Quartz is the standard scheduler for java but it lacks of a pleasant web ui.</p>
 
-    <div class="footer">
-        get the source code on GitHub : <a href="http://github.com/dbourdette/glass">dbourdette/glass</a>
-    </div>
+    <h2>Table of content</h2>
+
+    <dl>
+        <dt><a href="#ten-minutes">10 minutes test</a></dt>
+    </dl>
+
+    <h2>Content</h2>
+
+    <h3 id="ten-minutes">10 minutes test</h3>
+
+    <p>A <a href="http://maven.apache.org/">maven 2</a> environment is required for the test.</p>
+
+    <p>First thing to do is to checkout source code from git</p>
+
+    <pre>git clone git://github.com/dbourdette/glass.git</pre>
+
+    <p>Then launch tomcat with maven</p>
+
+    <pre>mvn tomcat:run</pre>
+
+    <p>A glass instance should be running on http://localhost:8080</p>
+
+    <div class="footer">get the source code on GitHub : <a href="http://github.com/dbourdette/glass">dbourdette/glass</a></div>
 
 </div>
 
