--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <p>Then launch tomcat with maven</p>
 
-    <pre>mvn tomcat:run</pre>
+    <pre>mvn tomcat:run -P test</pre>
 
     <p>A glass instance should be running on http://localhost:8080</p>
 
